; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_iscsi.c_iscsi_conn_get_sid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_transport_iscsi.c_iscsi_conn_get_sid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_cls_conn = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.iscsi_cls_session = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iscsi_cls_conn*)* @iscsi_conn_get_sid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iscsi_conn_get_sid(%struct.iscsi_cls_conn* %0) #0 {
  %2 = alloca %struct.iscsi_cls_conn*, align 8
  %3 = alloca %struct.iscsi_cls_session*, align 8
  store %struct.iscsi_cls_conn* %0, %struct.iscsi_cls_conn** %2, align 8
  %4 = load %struct.iscsi_cls_conn*, %struct.iscsi_cls_conn** %2, align 8
  %5 = getelementptr inbounds %struct.iscsi_cls_conn, %struct.iscsi_cls_conn* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.iscsi_cls_session* @iscsi_dev_to_session(i32 %7)
  store %struct.iscsi_cls_session* %8, %struct.iscsi_cls_session** %3, align 8
  %9 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %3, align 8
  %10 = getelementptr inbounds %struct.iscsi_cls_session, %struct.iscsi_cls_session* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}

declare dso_local %struct.iscsi_cls_session* @iscsi_dev_to_session(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
